<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.Edicion_perfil">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile_circle" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginTop="-65dp"
        android:layout_marginEnd="-13dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/ajustes" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="151dp"
        android:layout_height="152dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/usuario" />

    <EditText
        android:id="@+id/nombre_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nombre_perfil_txt" />

    <EditText
        android:id="@+id/apellido_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Apellidos_perfil_txt" />

    <EditText
        android:id="@+id/cargo_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/cargo_perfil_txt" />

    <EditText
        android:id="@+id/correo_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/correo_txt" />

    <EditText
        android:id="@+id/telefono_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/telefono_txt" />

    <EditText
        android:id="@+id/fecha_nac_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/fecha_nacimiento_txt" />

    <Button
        android:id="@+id/guardar_boton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/fecha_nac_editable"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="1dp"
        android:text="@string/guardar_cambios_txt" />
</RelativeLayout>