<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="10"
    android:columnCount="5"
    tools:context=".ui.theme.facturas">

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="3"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="Button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="Button" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="Button" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:background="@color/blue_carolina"
        android:gravity="center"
        android:text="@string/historial_facturas_txt"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/nombre_perfil_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/fecha_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:gravity="center"
        android:text="@string/Hora_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:gravity="center"
        android:text="@string/Costo_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/Place_holder_txt"
        android:textSize="16sp" />

</GridLayout>