<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Design_perfil">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/actividad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/boton_activo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activo_txt" />

            <RadioButton
                android:id="@+id/boton_suspendido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/suspendido_txt" />

            <RadioButton
                android:id="@+id/boton_ausente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ausente_txt" />
        </RadioGroup>

    </LinearLayout>

    <ImageButton
        android:id="@+id/perfil"
        android:layout_width="150dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:background="@drawable/profile_circle"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/usuario" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Editar perfil" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre_perfil_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/nyanza"
                android:gravity="center"
                android:text="@string/nombre_perfil_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mostrar_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/blue_charcoal"
                android:gravity="center"
                android:text="@string/Place_holder_txt"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/apellido_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/nyanza"
                android:gravity="center"
                android:text="@string/Apellidos_perfil_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mostrar_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/blue_charcoal"
                android:gravity="center"
                android:text="@string/Place_holder_txt"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/correo_perfil"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@color/nyanza"
        android:gravity="center"
        android:text="@string/correo_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mostrar_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_charcoal"
        android:text="@string/Place_holder_txt"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cargo_perfil"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@color/nyanza"
        android:gravity="center"
        android:text="@string/cargo_perfil_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mostrar_cargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_charcoal"
        android:text="@string/Place_holder_txt"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/favoritos"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/marcador" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen1_perfil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                app:srcCompat="@drawable/agregar_archivo" />

            <ImageView
                android:id="@+id/imagen4_perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/agregar_archivo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen2_perfil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                app:srcCompat="@drawable/agregar_archivo" />

            <ImageView
                android:id="@+id/imagen5_perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/agregar_archivo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen3_perfil"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                app:srcCompat="@drawable/agregar_archivo" />

            <ImageView
                android:id="@+id/imagen6_perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/agregar_archivo" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:background="@drawable/bgbar_main"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="mer"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/movimientos" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="in"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/hogar" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/usuario" />
    </LinearLayout>

</LinearLayout>